syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.vendorinfo;

import "vendorinfo/vendor_info_type.proto";
// this line is used by starport scaffolding # genesis/proto/import
import "gogoproto/gogo.proto";

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/vendorinfo/types";

// GenesisState defines the vendorinfo module's genesis state.
message GenesisState {
    repeated VendorInfoType vendorInfoTypeList = 1 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
